--- a/Project test/index.html
+++ b/Project test/index.html
@@ -16,7 +16,7 @@
 <!-- HEADER -->
 	<div id="home" class="header">
         <div class="logo">
-        	<img src="img/logo.png">
+        	<img src="img/logo.png" alt="logoAuthor">
         </div>
         <div id="menu" class="default">
 
@@ -42,8 +42,8 @@
 		<p>Lorem Ipsum is sipmly dummy text</p>
 		<p>of the printing</p>
         <a href="#" class="button1">Learn More</a>
-        <a class="left" href="#"><img src="img/leftArrow.png"></a>
-        <a class="right" href="#"><img src="img/rightArrow.png"></a>
+        <a class="left" href="#"><img src="img/leftArrow.png" alt="leftArrow"></a>
+        <a class="right" href="#"><img src="img/rightArrow.png" alt="rightArrow"></a>
         </div>
     </div>
 	</div>
